# overture

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Makefile  config.toml
example/articles/: markdown-rs_front-matter.md  test.md
example/generates/: about.html  articles.html  index.html  rss.xml
example/generates/articles/: markdown-rs_front-matter.html  test.html
src/: article.rs  builder.rs  config.rs  contents.rs  lib.rs  main.rs  project.rs  rss.rs  server.rs
src/articles/: article.rs  external.rs  local.rs  mod.rs
src/defaults/: config.toml
src/templates/: about.html  article.html  articles.html  footer.html  header.html  index.html  layout.html
src/templates/components/: articles.html  footer.html  header.html  profile.html
