[package]
name = "overture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = []

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.2", features = ["derive"] }
markdown = "1.0.0-alpha.16"
minijinja = { version = "1.0.16", features = ["loader"] }
minijinja-embed = "1.0.17"
reqwest = "0.12.2"
rocket = "0.5.0"
rss = "2.0.7"
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }

[build-dependencies]
minijinja-embed = "1.0.17"
